// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/View default 1`] = `
<div
  class="css-view-175oi2r"
/>
`;

exports[`components/View non-text is rendered 1`] = `
<div
  class="css-view-175oi2r"
>
  <div
    class="css-view-175oi2r"
    data-testid="1"
  />
</div>
`;

exports[`components/View prop "accessibilityLabel" value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-view-175oi2r"
/>
`;

exports[`components/View prop "accessibilityLabelledBy" value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-view-175oi2r"
/>
`;

exports[`components/View prop "accessibilityLiveRegion" value is set 1`] = `
<div
  aria-live="polite"
  class="css-view-175oi2r"
/>
`;

exports[`components/View prop "accessibilityRole" value alters HTML element 1`] = `
<article
  class="css-view-175oi2r"
  role="article"
/>
`;

exports[`components/View prop "accessibilityRole" value is "button" 1`] = `
<div
  class="css-view-175oi2r"
  role="button"
  tabindex="0"
/>
`;

exports[`components/View prop "accessibilityRole" value is set 1`] = `
<div
  class="css-view-175oi2r"
  role="presentation"
/>
`;

exports[`components/View prop "dir" value is "ltr" 1`] = `
<div
  class="css-view-175oi2r"
  dir="ltr"
/>
`;

exports[`components/View prop "dir" value is "rtl" 1`] = `
<div
  class="css-view-175oi2r"
  dir="rtl"
/>
`;

exports[`components/View prop "href" href with accessibilityRole 1`] = `
<a
  class="css-view-175oi2r"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`components/View prop "href" value is set 1`] = `
<a
  class="css-view-175oi2r"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" null values are excluded 1`] = `
<a
  class="css-view-175oi2r"
  href="https://example.com"
/>
`;

exports[`components/View prop "hrefAttrs" requires "href" 1`] = `
<div
  class="css-view-175oi2r"
/>
`;

exports[`components/View prop "hrefAttrs" target variant is set 1`] = `
<a
  class="css-view-175oi2r"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`components/View prop "hrefAttrs" value is set 1`] = `
<a
  class="css-view-175oi2r"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`components/View prop "lang" ar 1`] = `
<div
  class="css-view-175oi2r"
  dir="rtl"
  lang="ar"
/>
`;

exports[`components/View prop "lang" fr 1`] = `
<div
  class="css-view-175oi2r"
  dir="ltr"
  lang="fr"
/>
`;

exports[`components/View prop "lang" undefined 1`] = `
<div
  class="css-view-175oi2r"
/>
`;

exports[`components/View prop "lang" with dir 1`] = `
<div
  class="css-view-175oi2r"
  dir="ltr"
  lang="ar"
/>
`;

exports[`components/View prop "nativeID" value is set 1`] = `
<div
  class="css-view-175oi2r"
  id="nativeID"
/>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  class="css-view-175oi2r r-pointerEvents-ah5dr5"
/>
`;

exports[`components/View prop "style" value is set 1`] = `
<div
  class="css-view-175oi2r"
  style="border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px;"
/>
`;

exports[`components/View prop "testID" value is set 1`] = `
<div
  class="css-view-175oi2r"
  data-testid="123"
/>
`;
